# tocPDF

./: .gitignore  .pre-commit-config.yaml  README.md  pdf_py.py  pyproject.toml  setup.cfg
.github/workflows/: auto-release.yml  python-app.yml  python-publish.yml
example_pdf/: run_tocPDF_on_example.sh
example_pdf/latex_src/dotted/: dotted.tex
example_pdf/latex_src/nodots/: nodots.tex
src/toc-pdf/: pdf_py.py
src/tocPDF/: __init__.py  pdf_py.py  tocPDF.py
src/tocPDF.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_tocPDF.py
